--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/ivMain"
-        android:background="@drawable/main"
-        android:scaleType = "centerCrop"
+        android:background="@drawable/splash"
+        android:scaleType = "center"
         android:contentDescription="@string/mainImageContentDescription" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_list"
-            android:background="@drawable/menu"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:elevation="5dp" />
 
     </RelativeLayout>
 </FrameLayout>
